WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269720
[WGSL] Failed concretization generates invalid types
https://bugs.webkit.org/show_bug.cgi?id=269720
Summary
[WGSL] Failed concretization generates invalid types
Tadeu Zagallo
Reported
2024-02-19 09:25:44 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-02-19 09:25:48 PST
<
rdar://problem/123238768
>
Tadeu Zagallo
Comment 2
2024-02-19 09:28:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24753
EWS
Comment 3
2024-02-20 06:17:52 PST
Committed
275040@main
(ce88073de78f): <
https://commits.webkit.org/275040@main
> Reviewed commits have been landed. Closing PR #24753 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug