[WGSL] Failed concretization generates invalid types https://bugs.webkit.org/show_bug.cgi?id=269720 rdar://123238768

Reviewed by Mike Wyrzykowski.

`concretize` might return a nullptr if the type can't be concretized, so recursive
calls need to check the result before constructing the return type, otherwise it
can result in e.g. a vector with a nullptr element.

* Source/WebGPU/WGSL/Constraints.cpp:
(WGSL::concretize):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/275040@main